<resources>
    <string name="app_name">Afternoon Intents</string>
    <string name="btn_sms">SMS</string>
    <string name="btn_email">Email</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_share">Share</string>
    <string name="btn_mpesa">Mpesa</string>
    <string name="btn_call">Call</string>
    <string name="btn_website">Website</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>